# inkwell

./: .gitignore  README.md  code-review-report.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/: launch.json
.workbuddy/memory/: 2026-07-15.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: ChapterTree.tsx  ConfirmDialog.tsx  ContextMenu.tsx  Editor.tsx  GlobalSettingsModal.tsx  ProjectEditDialog.tsx  ProjectList.tsx  RecoveryDialog.tsx  RightPanel.tsx  SearchPanel.tsx  StatusBar.tsx  Toolbar.tsx  Workspace.tsx
src/components/chapter-tree/: ChapterItem.tsx  ChapterTree.tsx  DropTarget.tsx  EditableLabel.tsx  StatusDot.tsx  VolumeItem.tsx  index.ts
src/components/left-panel/: DictionaryView.tsx  LeftSidebarTabs.tsx  NotesView.tsx
src/components/settings/: widgets.tsx
src/hooks/: useAutoHideTopBars.ts  useClickOutside.ts  useWritingTime.ts
src/lib/: atomic.ts  draft.test.ts  draft.ts  export.test.ts  export.ts  fonts.ts  format.test.ts  format.ts  platform.ts  replace.test.ts  replace.ts  shortcuts.ts  snapshots.test.ts  snapshots.ts  stats.test.ts  stats.ts  storage.test.ts  storage.ts  theme.test.ts  theme.ts  utils.test.ts  utils.ts
src/store/: index.test.ts  index.ts  ordering.test.ts
src/types/: index.ts
