[package]
name = "inkwell"
version = "0.1.0"
description = "墨池 InkWell - 本地优先的小说写作工具"
authors = ["InkWell"]
edition = "2021"

[lib]
name = "inkwell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
opener = "0.7"
dirs-next = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
